--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "clsx": "^2.1.1",
     "framer-motion": "^11.1.7",
     "gsap": "^3.12.5",
+    "i18next": "^23.11.5",
     "locomotive-scroll": "^4.1.4",
     "mini-svg-data-uri": "^1.4.4",
     "next": "14.2.3",
